force-app/main/default/objects/mkto_si__GroupedWebActivityCache__c/mkto_si__GroupedWebActivityCache__c.object-meta.xml
<CustomObject>
    <label>GroupedWebActivityCache</label>
    <nameField>
        <label>GroupedWebActivityCache Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GroupedWebActivityCache</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>