force-app/main/default/objects/mkto_si__GroupedWebActivityCache__c/fields/mkto_si__AccountLinkName__c.field-meta.xml
<CustomField>
    <fullName>mkto_si__AccountLinkName__c</fullName>
    <label>AccountLinkName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>