force-app/main/default/objects/mkto_si__GroupedWebActivityCache__c/fields/mkto_si__City__c.field-meta.xml
<CustomField>
    <fullName>mkto_si__City__c</fullName>
    <label>City</label>
    <length>30</length>
    <type>Text</type>
</CustomField>