force-app/main/default/objects/mkto_si__GroupedWebActivityCache__c/fields/mkto_si__Id__c.field-meta.xml
<CustomField>
    <fullName>mkto_si__Id__c</fullName>
    <label>Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>