force-app/main/default/objects/mkto_si__GroupedWebActivityCache__c/fields/mkto_si__LastVisitDT__c.field-meta.xml
<CustomField>
    <fullName>mkto_si__LastVisitDT__c</fullName>
    <label>LastVisitDT</label>
    <type>DateTime</type>
</CustomField>