force-app/main/default/objects/mkto_si__GroupedWebActivityCache__c/fields/mkto_si__PageViews__c.field-meta.xml
<CustomField>
    <fullName>mkto_si__PageViews__c</fullName>
    <label>PageViews</label>
    <length>9</length>
    <type>Text</type>
</CustomField>