force-app/main/default/objects/mkto_si__GroupedWebActivityCache__c/fields/mkto_si__SearchLinkName__c.field-meta.xml
<CustomField>
    <fullName>mkto_si__SearchLinkName__c</fullName>
    <label>SearchLinkName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>