force-app/main/default/objects/mkto_si__GroupedWebActivityCache__c/fields/mkto_si__State__c.field-meta.xml
<CustomField>
    <fullName>mkto_si__State__c</fullName>
    <label>State</label>
    <length>20</length>
    <type>Text</type>
</CustomField>