force-app/main/default/objects/mkto_si__GroupedWebActivityCache__c/fields/mkto_si__WPageLink__c.field-meta.xml
<CustomField>
    <fullName>mkto_si__WPageLink__c</fullName>
    <label>WPageLink</label>
    <type>Url</type>
</CustomField>